Mon May 26 16:43:26 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix restriction on evaluating number of
	  initializers in a initializer-list to be separated from the
	  restriction on the array length.

Sat May 24 23:07:23 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Revert cancellation of length restriction
	  in initializer-list evaluation to shorten analysis time and tune
	  parameters of the adaptive array length restriction.

Fri May 23 18:12:24 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Correct to run on ruby 2.1.2p95 without
	  warnings.

Fri May 23 18:02:39 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Add unused global variable elimination to
	  reduce memory usage.
	* lib/adlint/cc1/syntax.rb : Ditto.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.

	* lib/adlint/cc1/type.rb : Support adaptive size limiter of the actual
	  array object.

	* features/code_check/W1031.feature : Fix typo.

Thu May 22 15:53:19 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.15
	  - Add checkpoints to ease preprocessing error investigation.
	  - Revise object allocation behavior of a large array in order not to
	    exhaust memory.

Thu May 22 11:52:20 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix initializer-list evaluation of an
	  array variable definition in order to examine all expressions in the
	  list even if the actual array size is limited to avoid memory
	  exhausting.

Wed May 21 17:43:04 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/type.rb : Fix Array#impl_length in order to limit
	  size of the actual array object correctly.

Wed May 14 16:50:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/eval.rb : Add checkpoints to ease preprocessing error
	  investigation.
